# winros

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  environment.yml  mjmodel.xml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
configs/: dashboard.yaml  default.yaml
docs/: ARCHITECTURE.md  ASSETS.md  BEGINNER_PATH.md  DASHBOARD.md  DECISIONS.md  DEMO.md  OPEN_SOURCE_BASELINES.md  QUICKSTART_ZH.md  REAL_ROBOTS.md  ROADMAP.md  ROS2_PACKAGES.md  SETUP_WINDOWS.md  SOURCES.md  TASKS.md  VALIDATION.md  VLA_INTERFACE.md  WHY_WINROS.md
requirements/: base.txt  dev.txt  rl.txt  vla.txt
ros2_ws/: README.md
ros2_ws/src/winros_mujoco/: package.xml  setup.cfg  setup.py
ros2_ws/src/winros_mujoco/launch/: mujoco_bridge.launch.py
ros2_ws/src/winros_mujoco/winros_mujoco/: __init__.py  mujoco_bridge_node.py
ros2_ws/src/winros_robot_adapters/: package.xml  setup.cfg  setup.py
ros2_ws/src/winros_robot_adapters/winros_robot_adapters/: __init__.py  adapter_node.py
scripts/: activate_ros2_winros.bat  activate_ros2_winros.ps1  activate_winros.ps1  build_ros2_ws.ps1  build_showcase_demo.py  capture_policy_frames.py  check_arm_dense_sparse_run.ps1  check_arm_parallel_curriculum.ps1  check_arm_rl_v2.ps1  check_arm_scripted_bc.ps1  check_current_unitree_runs.ps1  check_env.ps1  check_fetch_pickplace_rl.ps1  check_g1_stairs_forward.ps1  check_locomotion_runs.ps1  check_ros2_python_import.py  check_unitree_mjlab_runs.ps1  check_unitree_motion_v2_runs.ps1  check_unitree_speed_stairs_runs.ps1  fetch_open_assets.ps1  play_arm_grasp_policy.ps1  play_arm_rl_v2_latest.ps1  play_arm_scripted_bc.ps1  play_arm_scripted_pick_place.ps1  play_external_panda_pickplace.ps1  play_fetch_pickplace_policy.ps1  play_humanoid_mujoco_policy.ps1  play_quadruped_ant_policy.ps1  play_unitree_mjlab_g1_latest.ps1  play_unitree_mjlab_go2_latest.ps1  play_unitree_mjlab_velocity_task_latest.ps1  record_unitree_mjlab_demo.py  run_env_preview.ps1  run_mujoco_demo.ps1  setup_conda_env.ps1  setup_python.ps1  start_arm_dense_sparse_background.ps1  start_arm_parallel_curriculum_background.ps1  start_arm_rl_v2_background.ps1  start_fetch_pickplace_rl_background.ps1  (+23 more)
tests/: test_registry.py
(+57 files in other folders)
