[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winros"
version = "0.1.0"
description = "Windows-first ROS 2, MuJoCo, RL, and robot integration platform."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "WinROS contributors" }
]
dependencies = [
  "numpy>=1.26",
  "pyyaml>=6.0",
  "rich>=13.7"
]

[project.optional-dependencies]
sim = [
  "mujoco>=3.2"
]
rl = [
  "gymnasium>=0.29",
  "gymnasium-robotics>=1.4",
  "stable-baselines3>=2.3"
]
vla = [
  "opencv-python>=4.9",
  "pillow>=10.0"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10"
]

[project.scripts]
winros = "winros.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"winros.dashboard" = ["static/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
