<?xml version="1.0"?>
<package format="3">
  <name>winros_mujoco</name>
  <version>0.1.0</version>
  <description>MuJoCo bridge nodes for WinROS.</description>
  <maintainer email="maintainers@example.com">WinROS contributors</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>winros_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

